@@ -26,6 +26,7 @@
         y=12,13,14,13,14,12,13,14
         letter=Ww
     [/terrain]
+    [redraw][/redraw]
     [kill]
         x=18,18,18,19,19,20,20,20
         y=12,13,14,13,14,12,13,14
