@@ -4,6 +4,8 @@ changelog: http://svn.gna.org/viewcvs/*checkout*/wesnoth/trunk/changelog
 
 Version 1.3.7+svn:
   * Campaigns
+    * Son of the Black Eye
+      * Fixed bug in 'Saving Inarix', the bridge is now properly blown up.
 
   * Graphics
     * New graphics for Highwayman.
