@@ -1,4 +1,8 @@
 Version 1.3.7+svn:
+ * Campaigns
+   * Son of the Black Eye
+     * Fixed bug in 'Saving Inarix' where the blown up bridge wasn't shown
+       properly (bug #9817)
  * language and i18n:
    * updated translations: Bulgarian, Danish, Dutch, Finnish, French, German, 
      Polish, Swedish
